--- a/core/templates/core/invoice_form.html
+++ b/core/templates/core/invoice_form.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="mb-3">
-      <label class="form-label">Project Change Orders</label>
+  <label class="form-label">{% trans "Project Change Orders" %}</label>
       <select id="co_selector" multiple class="form-control"></select>
       <button type="button" id="add_change_order_lines" class="btn btn-outline-primary mt-2">Add CO Lines</button>
     </div>
