--- a/core/templates/core/master_schedule.html
+++ b/core/templates/core/master_schedule.html
@@ -354,7 +354,11 @@
       </div>
       <div class="legend-item">
         <div class="legend-color" style="background:#f59e0b;"></div>
-        <span>Change Orders</span>
+        <span>{% trans "Change Orders" %}</span>
+      </div>
+      <div class="legend-item">
+        <div class="legend-color" style="background:#fb923c;"></div>
+        <span class="text-muted text-xs">{% trans "Incluye Tasks, Change Orders, RFIs y Damages" %}</span>
       </div>
       <div class="legend-item">
         <div class="legend-color" style="background:#3b82f6;"></div>
