--- a/core/templates/core/project_profit_dashboard.html
+++ b/core/templates/core/project_profit_dashboard.html
@@ -81,7 +81,7 @@
                                 <td class="text-end"><strong>${{ estimate_revenue|floatformat:2 }}</strong></td>
                             </tr>
                             <tr>
-                                <td>Change Orders</td>
+                                <td>{% trans "Change Orders" %}</td>
                                 <td class="text-end"><strong>${{ cos_revenue|floatformat:2 }}</strong></td>
                             </tr>
                             <tr class="table-active">
