--- a/core/templates/core/changeorder_pdf.html
+++ b/core/templates/core/changeorder_pdf.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="{{ request.LANGUAGE_CODE|default:'es' }}">
 <head>
   <meta charset="utf-8" />
   <title>Change Order Firmado #{{ changeorder.id }}</title>
