--- a/core/templates/core/project_pdf.html
+++ b/core/templates/core/project_pdf.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ request.LANGUAGE_CODE|default:'en' }}">
 <head>
     <meta charset="UTF-8">
     <title>{{ project.name }} - Project Report</title>
