--- a/core/templates/core/proposal_public.html
+++ b/core/templates/core/proposal_public.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load core_extras %}
 <!DOCTYPE html>
-<html lang="es">
+<html lang="{{ request.LANGUAGE_CODE|default:'es' }}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
