--- a/core/templates/core/base_modern.html
+++ b/core/templates/core/base_modern.html
@@ -65,14 +65,14 @@
     {% include "core/components/header.html" %}
     
     {# Main Layout #}
-    <div class="flex min-h-[calc(100vh-64px)] w-full min-w-0 {% if show_sidebar|default:True %}lg:pl-64{% endif %}" data-layout-root>
+    <div class="flex min-h-[calc(100vh-64px)] w-full min-w-0" data-layout-root>
         {# Sidebar (on by default, can be hidden via show_sidebar=False) #}
         {% if show_sidebar|default:True %}
         {% include "core/components/sidebar.html" %}
         {% endif %}
         
         {# Main Content #}
-        <main class="flex-1 w-full min-w-0 transition-all duration-300" id="main-content" tabindex="-1">
+        <main class="flex-1 w-full min-w-0 transition-all duration-300 {% if show_sidebar|default:True %}lg:pl-64{% endif %}" id="main-content" tabindex="-1">
             <div class="w-full px-4 sm:px-6 lg:px-8 py-6 fade-in">
                 {# Page Header (optional breadcrumbs, title, actions) #}
                 {% block page_header %}{% endblock %}
